2007-01-29  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* demos/Makefile.am
	* demos/treeview.c
	* demos/treeview.gtkrc
	* demos/images/treeview-*.png: Example for treeview active / passive
	focus theming

2007-01-29  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (maybe_check_cursor_position)
	(draw_flat_box): When painting a treeview check if painting the cursor
	row, and adjust matching rules accordingly for active/passive focus

	Focus row background:
	  function = FLAT_BOX
	  state    = ACTIVE
	  shadow   = NONE for active, OUT for passive focus

2007-01-27  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (get_window_for_shape): Consider setting the
	window shape mask only when painting to widget->window, otherwise it
	can cause an infinite expose loop.

2007-01-25  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* === Release 2.91.0 ===

2007-01-25  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* Makefile.am (SUBDIRS)
	* configure.in (AC_OUTPUT): add demos directory

	* demos/run-demo: add wrapper script for running demos without
	installing libsapwood.so
	* demos/buttonbox.c
	* demos/buttonbox.gtkrc
	* demos/images/hbbox*.png: Example for dialog button theming

2007-01-24  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Implement dialog buttons using explicit "position" keyword. The
	position is calculated only for buttons in button boxes for now.
	Specific graphics can be applied with something like:
	  position = LEFT,TOP,RIGHT,BOTTOM	(solitary)
	  position = TOP,LEFT,BOTTOM		(leftmost)
	  position = TOP,BOTTOM			(middle)
	  position = TOP,RIGHT,BOTTOM		(rightmost)

	* src/sapwood-draw.c (match_theme_image): check position flags
	(maybe_set_dialog_button_details, draw_simple_image): rename
	maybe_set_dialog_button_details to maybe_check_button_position
	(maybe_check_button_position): don't check or modify the detail,
	instead use the position match flags